--- a/resources/assets/styles/settings/_settings.global.scss
+++ b/resources/assets/styles/settings/_settings.global.scss
@@ -1,12 +1,10 @@
 /** Import Bootstrap functions */
 @import "~bootstrap/scss/functions";
 
-
 // Variables
 //
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-
 
 //
 // Color system
@@ -111,7 +109,6 @@ $enable-hover-media-query:  false; // Deprecated, no longer affects any compiled
 $enable-grid-classes:       true;
 $enable-print-styles:       true;
 
-
 // Spacing
 //
 // Control the default styling of most Bootstrap elements by modifying these
@@ -123,8 +120,8 @@ $spacer: 1rem;
 $spacers: ();
 $spacers: map-merge((
   0: 0,
-  1: ($spacer * .25),
-  2: ($spacer * .5),
+  1: ($spacer * 0.25),
+  2: ($spacer * 0.5),
   3: $spacer,
   4: ($spacer * 1.5),
   5: ($spacer * 3)
@@ -163,7 +160,6 @@ $link-hover-decoration:     underline;
 
 $paragraph-margin-bottom:   1rem;
 
-
 // Grid breakpoints
 //
 // Define the minimum dimensions at which your layout will change,
@@ -180,7 +176,6 @@ $grid-breakpoints: (
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
 
-
 // Grid containers
 //
 // Define the maximum width of `.container` for different screen sizes.
@@ -193,7 +188,6 @@ $container-max-widths: (
 );
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
-
 
 // Grid columns
 //
@@ -212,23 +206,22 @@ $line-height-sm:              1.5;
 $border-width:                1px;
 $border-color:                $gray-300;
 
-$border-radius:               .25rem;
-$border-radius-lg:            .3rem;
-$border-radius-sm:            .2rem;
+$border-radius:               0.25rem;
+$border-radius-lg:            0.3rem;
+$border-radius-sm:            0.2rem;
 
-$box-shadow-sm:               0 .125rem .25rem rgba($black, .075);
-$box-shadow:                  0 .5rem 1rem rgba($black, .15);
-$box-shadow-lg:               0 1rem 3rem rgba($black, .175);
+$box-shadow-sm:               0 0.125rem 0.25rem rgba($black, 0.075);
+$box-shadow:                  0 0.5rem 1rem rgba($black, 0.15);
+$box-shadow-lg:               0 1rem 3rem rgba($black, 0.175);
 
 $component-active-color:      $white;
 $component-active-bg:         theme-color("primary");
 
-$caret-width:                 .3em;
+$caret-width:                 0.3em;
 
-$transition-base:             all .2s ease-in-out;
-$transition-fade:             opacity .15s linear;
-$transition-collapse:         height .35s ease;
-
+$transition-base:             all 0.2s ease-in-out;
+$transition-fade:             opacity 0.15s linear;
+$transition-collapse:         height 0.35s ease;
 
 // Fonts
 //
@@ -242,7 +235,7 @@ $font-family-base:            $font-family-sans-serif;
 
 $font-size-base:              1rem; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25);
-$font-size-sm:                ($font-size-base * .875);
+$font-size-sm:                ($font-size-base * 0.875);
 
 $font-weight-light:           300;
 $font-weight-normal:          400;
@@ -285,20 +278,18 @@ $text-muted:                  $gray-600;
 $blockquote-small-color:      $gray-600;
 $blockquote-font-size:        ($font-size-base * 1.25);
 
-$hr-border-color:             rgba($black, .1);
+$hr-border-color:             rgba($black, 0.1);
 $hr-border-width:             $border-width;
 
-$mark-padding:                .2em;
+$mark-padding:                0.2em;
 
 $dt-font-weight:              $font-weight-bold;
 
-$kbd-box-shadow:              inset 0 -.1rem 0 rgba($black, .25);
+$kbd-box-shadow:              inset 0 -0.1rem 0 rgba($black, 0.25);
 $nested-kbd-font-weight:      $font-weight-bold;
 
-$list-inline-padding:         .5rem;
+$list-inline-padding:         0.5rem;
 
 $mark-bg:                     #fcf8e3;
 
 $hr-margin-y:                 $spacer;
-
-@import "components";
