--- a/resources/assets/styles/objects/_objects.media.scss
+++ b/resources/assets/styles/objects/_objects.media.scss
@@ -31,7 +31,7 @@ their correct aspect ratios.
 Create responsive background-image with JavaScript by extracting src from a responsive img
 */
 
-.o-responsive-bg-image {
+.o-resp-bg-image {
   display: block;
   width: 100%;
   background-size: cover;
