Add social list component

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import "components/components.masthead";
 @import "components/components.comments";
 @import "components/components.forms";
+@import "components/components.list-social";
 @import "components/components.wp-classes";
 
 // UTILITIES
