Improve JSDoc comments

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,7 +1,7 @@
 /**
  * CSS folder structure is based on InuitCSS and ITCSS:
- * https://github.com/inuitcss/inuitcss
- * https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
+ * @see https://github.com/inuitcss/inuitcss
+ * @see https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
  *
  * I also recommend to write your CSS in BEM with Namespaces
  * More about it here:
