feat: New components, objects, elements, etc

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,54 +1,86 @@
-/**
- * CSS folder structure is based on InuitCSS and ITCSS:
- * @see https://github.com/inuitcss/inuitcss
- * @see https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
- *
- * I also recommend to write your CSS in BEM with Namespaces
- * More about it here:
- * https://csswizardry.com/2015/03/more-transparent-ui-code-with-namespaces/
- *
- * Prefix your imports with `~` to grab from node_modules/
- * @see https://github.com/webpack-contrib/sass-loader#imports
- * @import "~some-node-module";
- */
+
+/*
+CSS is written in BEM with Namespaces and I'd recommend to continue this approach to keep CSS scalable and maintainable for other developers.
+
+CSS folder structure is based on InuitCSS and ITCSS:
+@see https://github.com/inuitcss/inuitcss
+@see https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
+
+Introduction to BEM:
+@see http://getbem.com/introduction/
+
+How to deal with troubles you'll face in BEM:
+@see https://www.smashingmagazine.com/2016/06/battling-bem-extended-edition-common-problems-and-how-to-avoid-them/
+
+More about Namespaces:
+@see https://csswizardry.com/2015/03/more-transparent-ui-code-with-namespaces/
+
+Prefix your imports with `~` to grab from node_modules/
+@see https://github.com/webpack-contrib/sass-loader#imports
+@import "~some-node-module";
+*/
 
 // SETTINGS
-@import "settings/settings.global";
-@import "settings/settings.components";
+@import "settings/settings.bs-global";
+@import "settings/settings.bs-components";
+@import "settings/settings.variables";
 @import "settings/settings.mixins";
 
 // TOOLS
 @import "tools/tools.bootstrap";
+@import "tools/tools.hamburgers";
 
 // ELEMENTS
+@import "elements/elements.forms";
 @import "elements/elements.headings";
 @import "elements/elements.images";
+@import "elements/elements.page";
 @import "elements/elements.links";
 @import "elements/elements.lists";
 @import "elements/elements.tables";
 @import "elements/elements.typography";
 
 // OBJECTS
+@import "objects/objects.article";
+@import "objects/objects.card-deck";
+@import "objects/objects.center";
+@import "objects/objects.col";
+@import "objects/objects.grid";
 @import "objects/objects.layout";
-@import "objects/objects.wrappers";
 @import "objects/objects.ratio";
+@import "objects/objects.section";
+@import "objects/objects.screenreader";
+@import "objects/objects.wrappers";
 
 // COMPONENTS
+@import "components/components.alert";
+@import "components/components.article";
 @import "components/components.buttons";
-@import "components/components.header";
-@import "components/components.footer";
-@import "components/components.site-nav";
-@import "components/components.masthead";
 @import "components/components.bg-image";
+@import "components/components.card";
 @import "components/components.comments";
+@import "components/components.feat-image";
 @import "components/components.forms";
-@import "components/components.list-social";
+@import "components/components.footer";
+@import "components/components.header";
+@import "components/components.lead";
+@import "components/components.loader";
+@import "components/components.list-features";
+@import "components/components.list-icons";
+@import "components/components.masthead";
+@import "components/components.modal";
+@import "components/components.navbar";
+@import "components/components.newsletter";
+@import "components/components.subtitle";
+@import "components/components.title";
 @import "components/components.wp-classes";
+@import "components/components.ytplayer";
 
 // UTILITIES
+@import "utilities/utilities.align-text";
 @import "utilities/utilities.loaded";
 @import "utilities/utilities.overflow";
 
 // SCOPES
-@import "scopes/scopes.post";
-@import "scopes/scopes.page";
+@import "scopes/scopes.article";
+@import "scopes/scopes.section";
