--- a/resources/assets/styles/objects/_objects.wrappers.scss
+++ b/resources/assets/styles/objects/_objects.wrappers.scss
@@ -1,3 +1,12 @@
-.o-wrapper {
-  max-width: 200px;
+.o-wrapper-title {
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.o-wrapper-center {
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
 }
