--- a/resources/assets/styles/components/_components.forms.scss
+++ b/resources/assets/styles/components/_components.forms.scss
@@ -1,19 +1,39 @@
 /** Search form */
+
 .search-form {
   @extend .form-inline;
 }
-
 .search-form label {
   @extend .form-group;
-
   font-weight: normal;
 }
-
 .search-form .search-field {
   @extend .form-control;
 }
-
 .search-form .search-submit {
   @extend .btn;
   @extend .btn-secondary;
 }
+
+// .gform_wrapper input[type="email"],
+// .gform_wrapper input[type="date"],
+// .gform_wrapper input[type="datetime"],
+// .gform_wrapper input[type="datetime-local"],
+// .gform_wrapper input[type="month"],
+// .gform_wrapper input[type="number"],
+// .gform_wrapper input[type="password"],
+// .gform_wrapper input[type="search"],
+// .gform_wrapper input[type="tel"],
+// .gform_wrapper input[type="text"],
+// .gform_wrapper input[type="time"],
+// .gform_wrapper input[type="week"],
+// .gform_wrapper input[type="url"],
+// .gform_wrapper select,
+// .gform_wrapper textarea {
+//   @extend .form-control;
+// }
+
+// .gform_wrapper .button {
+//   @extend .btn;
+//   @extend .btn-primary;
+// }
