--- a/resources/assets/styles/utilities/_utilities.loaded.scss
+++ b/resources/assets/styles/utilities/_utilities.loaded.scss
@@ -1,13 +1,7 @@
-.u-bg-image-loaded {
-  filter: blur(0) !important;
-}
-
-// Added by lazysizes library
-.lazyload {
-  filter: blur(10px);
-  transition: filter 600ms cubic-bezier(0.5, 0.01, 0.5, 1);
-}
+// .u-bg-image-loaded {
+//   filter: blur(0) !important;
+// }
 
 .lazyloaded {
-  filter: blur(0);
+  opacity: 1;
 }
