Update css classes

--- a/resources/assets/styles/components/_components.alert.scss
+++ b/resources/assets/styles/components/_components.alert.scss
@@ -1,11 +1,3 @@
-.c-alert {
-  @extend .alert;
+// .alert {
 
-  &--danger {
-    @extend .alert-danger;
-  }
-
-  &--success {
-    @extend .alert-success;
-  }
-}
+// }
