--- a/resources/assets/styles/components/_components.lead.scss
+++ b/resources/assets/styles/components/_components.lead.scss
@@ -1,7 +1,7 @@
 // $body-font-size-large-sm: 18px;
 // $body-font-size-large-xl: 26px;
 
-// .c-lead {
+// .lead {
 //   @include responsive-type($body-font-size-large-sm, $body-font-size-large-xl);
 
 //   display: block;
