--- a/resources/assets/styles/components/_components.loader.scss
+++ b/resources/assets/styles/components/_components.loader.scss
@@ -4,7 +4,7 @@
 // $loader-color-yellow: #ffa700;
 // $loader-width       : 100px;
 
-// .c-loader {
+// .loader {
 //   position: relative;
 //   margin: 0 auto;
 //   width: $loader-width;
@@ -86,7 +86,7 @@
 // // $off-white    : rgba($white, 0.2);
 // // $spin-duration: 1s;
 
-// // .c-btn-loader {
+// // .btn-loader {
 // //   width: 3em;
 // //   height: 3em;
 // //   border-radius: 50%;
