--- a/resources/assets/styles/settings/_settings.variables.scss
+++ b/resources/assets/styles/settings/_settings.variables.scss
@@ -13,7 +13,7 @@ $theme-colors: (
 );
 
 //
-// Fonts
+// Responsive Typography settings
 //
 $responsive-type-min-width: 320px;
 $responsive-type-max-width: 1140px;
