--- a/resources/assets/styles/tools/_tools.bootstrap.scss
+++ b/resources/assets/styles/tools/_tools.bootstrap.scss
@@ -1,50 +1,3 @@
-@import "~bootstrap/scss/bootstrap";
-// @import "~bootstrap/scss/bootstrap-grid.scss";
-
-// @import "~bootstrap/scss/functions";
-// @import "~bootstrap/scss/variables";
-// @import "~bootstrap/scss/mixins";
-// @import "~bootstrap/scss/root";
-// @import "~bootstrap/scss/reboot";
-// @import "~bootstrap/scss/type";
-// @import "~bootstrap/scss/images";
-// @import "~bootstrap/scss/code";
-// @import "~bootstrap/scss/grid";
-// @import "~bootstrap/scss/tables";
-// @import "~bootstrap/scss/forms";
-// @import "~bootstrap/scss/buttons";
-
-/*! purgecss start ignore */
-
+@import "~bootstrap/scss/bootstrap-grid.scss";
 @import "~bootstrap/scss/transitions";
-
-/*! purgecss end ignore */
-
-// @import "~bootstrap/scss/dropdown";
-// @import "~bootstrap/scss/button-group";
-// @import "~bootstrap/scss/input-group";
-// @import "~bootstrap/scss/custom-forms";
-
-/*! purgecss start ignore */
-
-@import "~bootstrap/scss/nav";
-@import "~bootstrap/scss/navbar";
-
-/*! purgecss end ignore */
-
-// @import "~bootstrap/scss/card";
-// @import "~bootstrap/scss/breadcrumb";
-// @import "~bootstrap/scss/pagination";
-// @import "~bootstrap/scss/badge";
-// @import "~bootstrap/scss/jumbotron";
-// @import "~bootstrap/scss/alert";
-// @import "~bootstrap/scss/progress";
-// @import "~bootstrap/scss/media";
-// @import "~bootstrap/scss/list-group";
-// @import "~bootstrap/scss/close";
-// @import "~bootstrap/scss/modal";
-// @import "~bootstrap/scss/tooltip";
-// @import "~bootstrap/scss/popover";
-// @import "~bootstrap/scss/carousel";
-// @import "~bootstrap/scss/utilities";
-// @import "~bootstrap/scss/print";
+@import "~bootstrap/scss/utilities";
