Include namespaces for better separation from utility classes

--- a/resources/assets/styles/components/_components.footer.scss
+++ b/resources/assets/styles/components/_components.footer.scss
@@ -1,4 +1,4 @@
-.footer {
+.c-footer {
   @include responsive-type(40px, 80px, padding-top);
   @include responsive-type(40px, 80px, padding-bottom);
 }
