--- a/resources/assets/styles/components/_components.loader.scss
+++ b/resources/assets/styles/components/_components.loader.scss
@@ -4,7 +4,7 @@
 // $loader-color-yellow: #ffa700;
 // $loader-width       : 100px;
 
-// .loader {
+// .c-loader {
 //   position: relative;
 //   margin: 0 auto;
 //   width: $loader-width;
