--- a/resources/assets/styles/objects/_objects.section.scss
+++ b/resources/assets/styles/objects/_objects.section.scss
@@ -1,4 +1,7 @@
-.section {
+.o-section {
+  @include responsive-type(15px, 30px, margin-top);
+  @include responsive-type(15px, 30px, margin-bottom);
+
   //
   // Frontpage
   //
