--- a/resources/assets/styles/components/_components.subtitle.scss
+++ b/resources/assets/styles/components/_components.subtitle.scss
@@ -1,7 +1,7 @@
 // $subtitle-font-sm: 18px;
 // $subtitle-font-xl: 24px;
 
-// .subtitle {
+// .c-subtitle {
 //   color: theme-color('primary');
 //   font-weight: 600;
 
