--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -42,14 +42,15 @@ Prefix your imports with `~` to grab from node_modules/
 
 // OBJECTS
 @import "objects/objects.center";
+@import "objects/objects.list-bare";
+@import "objects/objects.link-bare";
 @import "objects/objects.ratio";
-@import "objects/objects.section";
 @import "objects/objects.wrapper";
 
 // COMPONENTS
 @import "components/components.alert";
 @import "components/components.article";
-@import "components/components.btn";
+@import "components/components.buttons";
 @import "components/components.bg-image";
 @import "components/components.card";
 @import "components/components.footer";
@@ -66,8 +67,9 @@ Prefix your imports with `~` to grab from node_modules/
 @import "components/components.search-form";
 @import "components/components.title";
 @import "components/components.subtitle";
+@import "components/components.section";
 @import "components/components.wp-classes";
-@import "components/components.player";
+@import "components/components.video";
 
 // UTILITIES
 @import "utilities/utilities.align-text";
