--- a/resources/assets/styles/tools/_tools.bootstrap.scss
+++ b/resources/assets/styles/tools/_tools.bootstrap.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/scss/bootstrap-reboot.scss";
 @import "~bootstrap/scss/bootstrap-grid.scss";
-@import "~bootstrap/scss/transitions";
+// @import "~bootstrap/scss/transitions";
+// @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/utilities";
