--- a/resources/assets/styles/objects/_objects.center.scss
+++ b/resources/assets/styles/objects/_objects.center.scss
@@ -1,7 +1,3 @@
 .o-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  // z-index: 1;
+  @include center();
 }
