--- a/resources/assets/styles/settings/_settings.mixins.scss
+++ b/resources/assets/styles/settings/_settings.mixins.scss
@@ -14,6 +14,33 @@ $browser-context: 16;
   @return ($pixels / $context) * 1em;
 }
 
+@mixin list-bare() {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@mixin link-reset() {
+  color: inherit;
+  text-decoration: none;
+
+  &:hover,
+  &:focus,
+  &:active {
+    outline: none;
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+@mixin center() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
 //
 //  Function to create an optimized svg url
 //  Version: 1.0.6
@@ -23,12 +50,12 @@ $browser-context: 16;
   //  Add missing namespace
   //
   @if not str-index($svg, xmlns) {
-    $svg: str-replace($svg, '<svg', '<svg xmlns="http://www.w3.org/2000/svg"');
+    $svg: str-replace($svg, "<svg", '<svg xmlns="http://www.w3.org/2000/svg"');
   } //
   //  Chunk up string in order to avoid
   //  "stack level too deep" error
   //
-  $encoded:'';
+  $encoded: "";
   $slice: 2000;
   $index: 0;
   $loops: ceil(str-length($svg) / $slice);
@@ -37,13 +64,13 @@ $browser-context: 16;
     $chunk: str-slice($svg, $index, $index + $slice - 1); //
     //   Encode
     //
-    $chunk: str-replace($chunk, '"', '\'');
-    $chunk: str-replace($chunk, '%', '%25');
-    $chunk: str-replace($chunk, '#', '%23');
-    $chunk: str-replace($chunk, '{', '%7B');
-    $chunk: str-replace($chunk, '}', '%7D');
-    $chunk: str-replace($chunk, '<', '%3C');
-    $chunk: str-replace($chunk, '>', '%3E'); //
+    $chunk: str-replace($chunk, '"', "'");
+    $chunk: str-replace($chunk, "%", "%25");
+    $chunk: str-replace($chunk, "#", "%23");
+    $chunk: str-replace($chunk, "{", "%7B");
+    $chunk: str-replace($chunk, "}", "%7D");
+    $chunk: str-replace($chunk, "<", "%3C");
+    $chunk: str-replace($chunk, ">", "%3E"); //
     //    The maybe list
     //
     //    Keep size and compile time down
@@ -73,14 +100,19 @@ $browser-context: 16;
 }
 
 //  Helper function to replace characters in a string
-@function str-replace($string,
-$search,
-$replace: '') {
+@function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
 
-  @return if($index,
-  str-slice($string, 1, $index - 1)+$replace+str-replace(str-slice($string, $index + str-length($search)), $search, $replace),
-  $string);
+  @return if(
+    $index,
+    str-slice($string, 1, $index - 1) + $replace +
+      str-replace(
+        str-slice($string, $index + str-length($search)),
+        $search,
+        $replace
+      ),
+    $string
+  );
 }
 /* stylelint-disable */
 
@@ -92,25 +124,36 @@ $replace: '') {
 /// @return {Number}
 ///
 @function to-number($value) {
-  @if type-of($value) == 'number' {
+  @if type-of($value) == "number" {
     @return $value;
-  } @else if type-of($value) != 'string' {
-    $_: log('Value for `to-number` should be a number or a string.');
+  } @else if type-of($value) != "string" {
+    $_: log("Value for `to-number` should be a number or a string.");
   }
 
   $result: 0;
   $digits: 0;
-  $minus: str-slice($value, 1, 1) == '-';
-  $numbers: ('0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9);
+  $minus: str-slice($value, 1, 1) == "-";
+  $numbers: (
+    "0": 0,
+    "1": 1,
+    "2": 2,
+    "3": 3,
+    "4": 4,
+    "5": 5,
+    "6": 6,
+    "7": 7,
+    "8": 8,
+    "9": 9,
+  );
 
   @for $i from if($minus, 2, 1) through str-length($value) {
     $character: str-slice($value, $i, $i);
 
-    @if not (index(map-keys($numbers), $character) or $character == '.') {
-      @return to-length(if($minus, -$result, $result), str-slice($value, $i))
+    @if not(index(map-keys($numbers), $character) or $character == ".") {
+      @return to-length(if($minus, -$result, $result), str-slice($value, $i));
     }
 
-    @if $character == '.' {
+    @if $character == "." {
       $digits: 1;
     } @else if $digits == 0 {
       $result: $result * 10 + map-get($numbers, $character);
@@ -120,7 +163,7 @@ $replace: '') {
     }
   }
 
-  @return if($minus, -$result, $result);;
+  @return if($minus, -$result, $result);
 }
 
 ///
@@ -132,10 +175,26 @@ $replace: '') {
 /// @return {Number} - `$value` expressed in `$unit`
 ///
 @function to-length($value, $unit) {
-  $units: ('px': 1px, 'cm': 1cm, 'mm': 1mm, '%': 1%, 'ch': 1ch, 'pc': 1pc, 'in': 1in, 'em': 1em, 'rem': 1rem, 'pt': 1pt, 'ex': 1ex, 'vw': 1vw, 'vh': 1vh, 'vmin': 1vmin, 'vmax': 1vmax);
+  $units: (
+    "px": 1px,
+    "cm": 1cm,
+    "mm": 1mm,
+    "%": 1%,
+    "ch": 1ch,
+    "pc": 1pc,
+    "in": 1in,
+    "em": 1em,
+    "rem": 1rem,
+    "pt": 1pt,
+    "ex": 1ex,
+    "vw": 1vw,
+    "vh": 1vh,
+    "vmin": 1vmin,
+    "vmax": 1vmax,
+  );
 
   @if not index(map-keys($units), $unit) {
-    $_: log('Invalid unit `#{$unit}`.');
+    $_: log("Invalid unit `#{$unit}`.");
   }
 
   @return $value * map-get($units, $unit);
@@ -154,13 +213,12 @@ $replace: '') {
 /// @return {List} - `$str-1 $str-2`.
 
 @function split-str($string, $separator) {
+  $index: str-index($string, $separator);
 
-   $index : str-index($string,  $separator);
+  $str-1: str-slice($string, 1, $index - 1);
+  $str-2: str-slice($string, $index + 1);
 
-   $str-1 : str-slice($string, 1, $index - 1);
-   $str-2 : str-slice($string, $index + 1);
-
-   @return $str-1 $str-2;
+  @return $str-1 $str-2;
 }
 
 // This Responsive Typography demo is to show the simplier syntax
@@ -178,14 +236,25 @@ $responsive-type-min-width: 320px !default;
 $responsive-type-max-width: 1140px !default;
 
 // Base Responsive resize function that the type one uses
-@mixin responsive-resize($properties, $min-vw, $max-vw, $min-value, $max-value) {
+@mixin responsive-resize(
+  $properties,
+  $min-vw,
+  $max-vw,
+  $min-value,
+  $max-value
+) {
   @each $property in $properties {
     #{$property}: $min-value;
   }
 
   @media (min-width: $min-vw) {
     @each $property in $properties {
-      #{$property}: calc(#{$min-value} + #{strip-unit($max-value - $min-value)} * (100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)});
+      #{$property}: calc(
+        #{$min-value} +
+          #{strip-unit($max-value - $min-value)} *
+          (100vw - #{$min-vw}) /
+          #{strip-unit($max-vw - $min-vw)}
+      );
     }
   }
 
@@ -204,30 +273,36 @@ $responsive-type-max-width: 1140px !default;
   $max-vw: $responsive-type-max-width;
 
   // check if value is using the "@" api syntax.
-  @if ( type-of($min-value) == "string") {
+  @if (type-of($min-value) == "string") {
     // So it is a string does it have a "@" symbol to break apart
-    @if ( str-index($min-value, '@') ) {
+    @if (str-index($min-value, "@")) {
       // split string helper
-      $min-value-list : split-str($min-value, '@');
+      $min-value-list: split-str($min-value, "@");
       // unquote the split and cast the string to a number
       // http://hugogiraudel.com/2014/01/15/sass-string-to-number/
-      $min-value: to-number( unquote( nth($min-value-list, 1) ) );
-      $min-vw: to-number( unquote( nth($min-value-list, 2) ));
+      $min-value: to-number(unquote(nth($min-value-list, 1)));
+      $min-vw: to-number(unquote(nth($min-value-list, 2)));
     }
   }
 
   // run the same checks over the $max-value
-  @if ( type-of($max-value) == "string") {
+  @if (type-of($max-value) == "string") {
     // So it is a string does it have a "@" symbol to break apart
-    @if ( str-index($max-value, '@') ) {
-      $max-value-list : split-str($max-value, '@');
-      $max-value: to-number( unquote( nth($max-value-list, 1) ) );
-      $max-vw: to-number( unquote( nth($max-value-list, 2) ));
+    @if (str-index($max-value, "@")) {
+      $max-value-list: split-str($max-value, "@");
+      $max-value: to-number(unquote(nth($max-value-list, 1)));
+      $max-vw: to-number(unquote(nth($max-value-list, 2)));
     }
   }
 
   // feed the shorter api back to the responsice resizer
-  @include responsive-resize($properties, $min-vw, $max-vw, $min-value, $max-value);
+  @include responsive-resize(
+    $properties,
+    $min-vw,
+    $max-vw,
+    $min-value,
+    $max-value
+  );
 }
 
 /*
