--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -26,6 +26,7 @@ Prefix your imports with `~` to grab from node_modules/
 
 // TOOLS
 @import "tools/tools.bootstrap";
+@import "tools/tools.rfs";
 @import "tools/tools.hamburgers";
 
 // ELEMENTS
