--- a/resources/assets/styles/objects/_objects.ratio.scss
+++ b/resources/assets/styles/objects/_objects.ratio.scss
@@ -1,7 +1,10 @@
-/*
-Create ratio-bound content blocks, to keep media (e.g. images, videos) in
-their correct aspect ratios.
-*/
+/**
+ * Create ratio-bound content blocks, to keep media (e.g. images, videos) in
+ * their correct aspect ratios.
+ *
+ * http://alistapart.com/article/creating-intrinsic-ratios-for-video
+ *
+ */
 
 @mixin aspect-ratio($width, $height) {
   padding-bottom: ($height / $width) * 100%;
@@ -11,17 +14,11 @@ their correct aspect ratios.
   position: relative;
   display: block;
   overflow: hidden;
+  flex: 1 0 auto;
+  margin: 0;
 
   &__fill--full-hd {
     @include aspect-ratio(16, 9);
-  }
-
-  &__fill--16by10 {
-    @include aspect-ratio(16, 10);
-  }
-
-  &__fill--1by1 {
-    @include aspect-ratio(1, 1);
   }
 
   &__content {
@@ -29,7 +26,9 @@ their correct aspect ratios.
     top: 0;
     bottom: 0;
     left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
 }
