feat: Create icon component

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -55,6 +55,7 @@ Prefix your imports with `~` to grab from node_modules/
 @import "components/components.card";
 @import "components/components.footer";
 @import "components/components.header";
+@import "components/components.icon";
 @import "components/components.lead";
 @import "components/components.loader";
 @import "components/components.list-features";
