--- a/resources/assets/styles/elements/_elements.links.scss
+++ b/resources/assets/styles/elements/_elements.links.scss
@@ -1,11 +1,9 @@
 a {
-  color: theme-color('primary');
+  color: theme-color("primary");
   transition: all 0.15s ease;
 
-  &:hover,
-  &:focus,
-  &:active {
-    color: darken(theme-color('primary'), 5%);
+  @include hocus() {
+    color: darken(theme-color("primary"), 5%);
     text-decoration: none;
   }
 }
