--- a/resources/assets/styles/tools/_tools.rfs.scss
+++ b/resources/assets/styles/tools/_tools.rfs.scss
@@ -13,7 +13,7 @@ $rfs-base-font-size: 1.25rem;
 $rfs-font-size-unit: rem;
 
 // Breakpoint at where font-size starts decreasing if screen width is smaller
-$rfs-breakpoint: 1200px;
+$rfs-breakpoint: grid-breakpoints("xl");
 $rfs-breakpoint-unit: px;
 
 // Resize font-size based on screen height and width
