--- a/resources/assets/styles/elements/_elements.images.scss
+++ b/resources/assets/styles/elements/_elements.images.scss
@@ -1,18 +1,14 @@
 /**
  * 1. Fluid images for responsive purposes.
- * 2. Offset `alt` text from surrounding copy..
+ * 2. Offset `alt` text from surrounding copy.
+ * 3. Setting `vertical-align` removes the whitespace that appears under `img`
+ *    elements when they are dropped into a page as-is. Safer alternative to
+ *    using `display: block;`.
  */
-
 img {
   max-width: 100%; /* [1] */
-  height: auto;
   font-style: italic; /* [2] */
-}
-
-// Lazyloaded images
-img[data-src] {
-  opacity: 0;
-  transition: opacity 0.5s cubic-bezier(0.5, 0.01, 0.5, 1);
+  vertical-align: middle; /* [3] */
 }
 
 figure {
