--- a/resources/assets/styles/elements/_elements.lists.scss
+++ b/resources/assets/styles/elements/_elements.lists.scss
@@ -1,21 +1,3 @@
 ul {
-  list-style: disc;
-}
-
-ol {
-  list-style: decimal;
-}
-
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 1em;
-  padding-left: 2em;
-  line-height: 1.75;
-}
-
-li > ul,
-li > ol {
-  margin-bottom: 0;
-  margin-left: 0.5em;
+  @include list-bare();
 }
