--- a/resources/assets/styles/components/_components.subtitle.scss
+++ b/resources/assets/styles/components/_components.subtitle.scss
@@ -2,7 +2,7 @@
 // $subtitle-font-xl: 24px;
 
 // .c-subtitle {
-//   color: theme-color('primary');
+//   color: $color-brand-primary;
 //   font-weight: 600;
 
 //   @include responsive-type($subtitle-font-sm, $subtitle-font-xl);
