--- a/resources/assets/styles/settings/_all.scss
+++ b/resources/assets/styles/settings/_all.scss
@@ -8,7 +8,9 @@
 // SETTINGS
 // Global...............Globally-available variables and settings/config.
 // Colors...............Manage our color palette in isolation.
+// Fonts................Manage our fonts.
 //
 
 @import "settings.global";
 @import "settings.colors";
+@import "settings.fonts";
