--- a/resources/assets/styles/tools/_all.scss
+++ b/resources/assets/styles/tools/_all.scss
@@ -13,6 +13,7 @@
 
 @import "tools.functions";
 @import "tools.mixins";
+@import "tools.fonts";
 @import "tools.typography";
 @import "tools.rfs";
 @import "tools.aliases";
