--- a/resources/assets/styles/elements/_elements.forms.scss
+++ b/resources/assets/styles/elements/_elements.forms.scss
@@ -69,9 +69,9 @@ textarea {
 //   font-weight: 600;
 // }
 
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  @extend .c-btn;
-  @extend .c-btn--primary;
-}
+// input[type="button"],
+// input[type="reset"],
+// input[type="submit"] {
+//   @extend .c-btn;
+//   @extend .c-btn--primary;
+// }
