--- a/resources/assets/styles/elements/_elements.page.scss
+++ b/resources/assets/styles/elements/_elements.page.scss
@@ -4,10 +4,6 @@
  * 1. Ensure the page always fills at least the entire height of the viewport.
  */
 
-$body-font-family : -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$body-font-size-sm: 1rem;
-$body-font-size-lg: 1.25rem;
-
 html {
   min-height: 100%; /* [1] */
   overflow-x: hidden;
@@ -15,11 +11,15 @@ html {
 
 body {
   font-family: $body-font-family;
-  font-size: $body-font-size-sm;
+  font-size: rem($body-font-size-lg);
 
-  @include media-breakpoint-up(lg) {
-    font-size: $body-font-size-lg;
+  @include media-breakpoint-only(md) {
+    font-size: rem($body-font-size-sm);
   }
+}
+
+p {
+  line-height: 1.5;
 }
 
 /**
@@ -28,5 +28,5 @@ and is ignored by browsers that don’t support :focus-visible.
 https://twitter.com/LeaVerou/status/1045768279753666562
 */
 :focus:not(:focus-visible) {
-  outline: none
+  outline: none;
 }
