--- a/resources/assets/styles/tools/_tools.hamburgers.scss
+++ b/resources/assets/styles/tools/_tools.hamburgers.scss
@@ -8,7 +8,7 @@ $hamburger-padding-y: 0.5rem;
 $hamburger-layer-width: 25px;
 $hamburger-layer-height: 1px;
 $hamburger-layer-spacing: 6px;
-$hamburger-layer-color: theme-color("primary");
+$hamburger-layer-color: $color-brand-primary;
 $hamburger-layer-border-radius: 4px;
 $hamburger-hover-opacity: 0.7;
 $hamburger-hover-transition-duration: 0.15s;
