--- a/resources/assets/styles/tools/_tools.rfs.scss
+++ b/resources/assets/styles/tools/_tools.rfs.scss
@@ -1,3 +1,5 @@
+@import "~rfs/scss";
+
 // stylelint-disable property-blacklist, scss/dollar-variable-default
 
 // SCSS RFS mixin
@@ -9,7 +11,7 @@
 // Configuration
 
 // Base font size
-$rfs-base-font-size: 1.25rem;
+$rfs-base-font-size: $global-font-size;
 $rfs-font-size-unit: rem;
 
 // Breakpoint at where font-size starts decreasing if screen width is smaller
@@ -33,5 +35,3 @@ $rfs-safari-iframe-resize-bug-fix: false;
 
 // Disable RFS by setting $enable-responsive-font-sizes to false
 $enable-responsive-font-sizes: true;
-
-@import "~rfs/scss";
